[project]
name = "eacloudnodes"
description = "A collection of ComfyUI custom nodes for interacting with various cloud services. These nodes are designed to work with any ComfyUI instance, including cloud-hosted environments (such as MimicPC) where users may have limited system access. "
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["pillow", "requests", "torch", "torchvision"]

[project.urls]
Repository = "https://github.com/EnragedAntelope/ComfyUI-EACloudNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "enragedantelope"
DisplayName = "ComfyUI-EACloudNodes"
Icon = ""
