[project]
name = "eacloudnodes"
description = "ComfyUI v3 compatible nodes for cloud AI services. Groq (v3) and OpenRouter (v1) nodes with vision support, JSON output, auto-retry, and comprehensive validation. Works in all ComfyUI environments including cloud-hosted instances."
version = "1.3.0"
license = {file = "LICENSE"}
dependencies = ["pillow", "requests", "torch", "torchvision"]

[project.urls]
Repository = "https://github.com/EnragedAntelope/ComfyUI-EACloudNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "enragedantelope"
DisplayName = "ComfyUI-EACloudNodes"
Icon = ""
