[project]
name = "eacloudnodes"
description = "ComfyUI v3 compatible nodes for cloud AI services. All nodes (Groq, OpenRouter, OpenRouter Models) fully migrated to v3 with enhanced validation, tooltips, and error handling. Vision support, JSON output, auto-retry. Works in all ComfyUI environments."
version = "2.0.11"
license = {file = "LICENSE"}
dependencies = ["pillow", "requests", "torch", "torchvision"]

[project.urls]
Repository = "https://github.com/EnragedAntelope/ComfyUI-EACloudNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "enragedantelope"
DisplayName = "ComfyUI-EACloudNodes"
Icon = ""
